# -AI-Capstone-

./: .gitignore  Dockerfile  README.MD  README.md  bnn-tofino-32-8-32.json  bnn-tofino-32-8-32.p4i  clean.sh  client_send_flows.py  docker-entrypoint.sh  ds_ablation_plot.py  ds_plot.py  ds_retraining.py  final_report.tex  full_dataset_prep.py  init.sh  inject.py  main.json  main.p4  models_size.py  normal.pcap  plot.py  plot_cross_dataset_eval.py  pyproject.toml  requirements.txt  rule_a.pcap  rule_b.pcap  rules.json  script.sh  shap_training_test.py  simple_cross_dataset_eval.py  tree_rule_1.pcap  trigger.py  verify.py
.devcontainer/: devcontainer.json
Poster_Presentation/: Project_Report_Latex.tex
Project_Report/: Project_Report_Latex.tex
configs/: binarization.ini  bnn-trainer.ini  cic-unsw-nb15.ini  cic_unsw_nb15.ini  cicids2017.ini  cnn-trainer.ini  experiments.ini  mlp-trainer.ini  models.ini  tiny.ini  trainer.ini  wide.ini
data/: rules.json
docker/: Dockerfile  docker-compose.yml
docs/: Poster_Presentation_Latex.tex  RUN_INSTRUCTIONS.md
ds_tests/: ds_no_retraining.py  ds_plot.py
helpers/: __init__.py  bfrt_bnn.py  pycommon.py  utils.py
lua/: bnn_hdr_126-42-2_7nr.lua  features_hdr.lua  features_hdrv2.lua
ml_helpers/: __init__.py  metrics.py  models.py  shap_explainer.py  simple_trainer.py  trainer.py  utils.py
notebooks/: centroid_classifier.ipynb
p4src/: README.MD  bnn-bmv2-32-8-32.p4  bnn-tna-32-8-32.p4  bnn_hdr.lua  compile_p4.sh  controller.py  controller_adv.py  main.p4  mlp.py  multipipe_inetml.p4  plot_model_comparison.py  pycommon.py  (+14 more)
(+184 files in other folders)
