[project]
name = "binocular"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "brevitas==0.11.0",
    "coverage==7.6.1",
    "imblearn>=0.0",
    "matplotlib==3.5.1",
    "numpy==1.24.4",
    "pandas==1.5.3",
    "scapy==2.5.0",
    "scikit-learn==1.3.2",
    "shap==0.44.1",
    "torch==2.2.0",
]

[tool.setuptools]
packages = ["helpers", "ml_helpers"]
